--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project folders
+dataset/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +131,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IDE folders
+.idea/
